non-msrv-tests/tests/ui/no_generics.stderr
error: derive-where doesn't support items without generics, `skip` attributes or `enum`s implementing `Default`, as this can already be handled by standard `#[derive(..)]`
 --> tests/ui/no_generics.rs:2:1
  |
2 | / #[derive_where(Clone)]
3 | | struct Test1(u8);
  | |_________________^

error: derive-where doesn't support items without generics, `skip` attributes or `enum`s implementing `Default`, as this can already be handled by standard `#[derive(..)]`
 --> tests/ui/no_generics.rs:6:1
  |
6 | / #[derive_where(Clone)]
7 | | enum Test2 {
8 | |     A(u8),
9 | | }
  | |_^
